Move the correction request button down so it doesn't overlap long content.

--- a/www/css/peoplefinder_default.css
+++ b/www/css/peoplefinder_default.css
@@ -45,7 +45,7 @@ body #footer .footer_col {
 #cboxTitle {display:none !important;}
 #maincontent a.dir_correctionRequest {
 	position:absolute;
-	bottom:5px;
+	bottom:-25px;
 	right:5px;
 	border-radius:5px;
 	-webkit-border-radius:5px;
